- [Bug title] — [Bug description] (ID: [Bug ID])  

---

## Standalone Features  
*List Features delivered that are not linked to an Epic.*  
- [Feature title] — [Feature description] (ID: [Feature ID])  

---

## Standalone Bug Fixes  
*List Bug Fixes delivered that are not linked to an Epic.*  
- [Bug title] — [Bug description] (ID: [Bug ID])  

---

## Known Issues  
*List any known issues remaining after this release.*  
- [Issue title] — [Issue description]

_If no known issues:_  
None reported at time of release.

---

## Deployment / Technical Notes  
*Provide any relevant deployment notes, migration steps, or technical considerations for this release.*
```

Change control template:
```
# Change Control Ticket   

## Overview of Change  
*Provide a high-level description of the change, including its purpose and scope.*  
[Change description goes here.]

---

## Items Included in the Change  
*List all work items (Epics, Features, Stories, Bugs) that form part of this change.*  

### Epics  
- **[Epic Title]** — [Epic description] (ID: [Epic ID])

### Features  
- **[Feature Title]** — [Feature description] (ID: [Feature ID])

### Bug Fixes  
- **[Bug Title]** — [Bug description] (ID: [Bug ID])

---

## Benefits of the Change  
*Describe the expected benefits or outcomes from implementing this change.*  
[Benefits go here — e.g., improved performance, compliance, enhanced user experience, defect resolution.]

---

## Deployment / Technical Considerations  
*List any technical notes, special deployment steps, rollback plan, or risks associated with this change.*  
[Technical notes go here.]

---

## Testing and Validation  
*Summarise how this change has been tested and validated.*  
[Testing details — e.g., unit tests, integration tests, UAT, performance testing.]

---

## Additional Notes  
*Include any other relevant information for stakeholders, approvers, or implementers.*  
[Other notes.]
```
==== ReleaseNotes_WorkItemsIntro ====
Work items: